# mediatransfer

./: .aiignore  .dockerignore  .env.example  .env.immich.example  .gitattributes  .gitignore  AGENTS.md  CATALOG_GOOGLE_PHOTOS_PLAN.md  Dockerfile  IMMICH_TUNNEL_PLAN.md  LLM_INSTRUCTIONS.md  MVP_NO_APPSTORE_IPHONE_WEB_PLAN.md  PLAN.md  README.md  TECH_STACK.md  VIRTUALIZED_GRID_PLAN.md  check-s3-size.ts  debug-output.txt  delete-safe-downloads.ts  docker-compose.immich.yml  docker-compose.yml  google_photos_inspiration.html  google_photos_source.html  log_dump.txt  package-lock.json  package.json  prisma.config.ts  pyproject.toml  repair-output.txt  test-ffmpeg-resolve.ts  test-output.txt  test-s3-lifecycle.ts  test-s3-multipart.ts  test-s3-speed.ts  test-s3-throughput.ts  test-s3-upload.ts  test-s3-verify.ts  test-sidecar-fix.ts  tsconfig.json  vitest.config.ts
data/: query.sql
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
mediatransfer/: __init__.py  cli.py  metadata.py  transfer.py
mediatransfer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plans/: 01-quic-to-http2.md  02-compose-token-interpolation.md  03-stale-fuse-mounts.md  04-remove-sysctls.md  05-host-side-fuse-cleanup.md  06-cloudflare-ingress-timeouts.md  07-lan-endpoint-mobile.md  08-remove-quic-comments.md  09-takeout-reimport-from-tgz-backup.md  10-thumbnail-recovery-runbook.md
prisma/: schema.prisma
scripts/: abort-orphan-multipart.mjs  catalog-dedup.ts  (+61 more)
(+250 files in other folders)
